Fixed Weather in conf

--- a/Simple-Conky-theme/Simple-Conky-theme.conf
+++ b/Simple-Conky-theme/Simple-Conky-theme.conf
@@ -41,7 +41,7 @@ conky.config = {
 }
 
 conky.text = [[
-
+${execi 3600 ~/.config/conky/Simple-Conky-theme/scripts/weather-v2.0.sh}\
 ${font IBM Plex Mono:size=22}$alignr${time %A}
 ${voffset -10}${font IBM Plex Mono:size=18}$alignr${time %d %B %Y}
 ${font IBM Plex Mono:size=44}$alignr${time %H:%M}
